Try, once again, to correct string escapes.