@@ -19,9 +19,9 @@ package com.io7m.jsx.prettyprint;
 import com.io7m.jsx.SExpressionType;
 import com.io7m.jsx.SExpressionType.SQuotedString;
 import com.io7m.jsx.SExpressionType.SSymbol;
+import com.io7m.jsx.api.lexer.JSXLexerEscapes;
 import de.uka.ilkd.pp.Layouter;
 import de.uka.ilkd.pp.WriterBackend;
-import org.apache.commons.text.StringEscapeUtils;
 
 import java.io.IOException;
 import java.io.Writer;
@@ -95,11 +95,11 @@ public final class JSXPrettyPrinterMarkupStyle implements JSXPrettyPrinterType
       final SExpressionType e)
       throws IOException
     {
-      if (e instanceof SQuotedString quotedString) {
+      if (e instanceof final SQuotedString quotedString) {
         return this.quotedString(quotedString);
-      } else if (e instanceof SSymbol symbol) {
+      } else if (e instanceof final SSymbol symbol) {
         return this.symbol(symbol);
-      } else if (e instanceof SExpressionType.SListType list) {
+      } else if (e instanceof final SExpressionType.SListType list) {
         return this.list(list);
       } else {
         throw new IllegalStateException();
@@ -155,7 +155,7 @@ public final class JSXPrettyPrinterMarkupStyle implements JSXPrettyPrinterType
       throws IOException
     {
       this.layout.print(
-        String.format("\"%s\"", StringEscapeUtils.escapeJava(e.text()))
+        "\"%s\"".formatted(JSXLexerEscapes.escapeString(e.text()))
       );
       return null;
     }
